--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,31 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
-*>* {
+* {
   font-family: "Poppins", cursive;
-  margin: 0;
 }
 
-body {
-  background: #0f0c29;
-  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #24243e, #302b63, #0f0c29);
-  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #24243e, #302b63, #0f0c29);
-  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
+h2 {
+  padding-bottom: 2px;
 }
 
-.App {
-  height: 150vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-}
+/* animated background */
+
+
+
+
+
+
+
+
+
 
 .register {
+  padding-top: 100px;
+  margin-left: 187px;
   max-width: 978px;
   width: 100vw;
   display: flex;
-  border: 1px solid #e9ecef;
+  /* border: 1px solid #e9ecef; */
   border-radius: 5px;
   /* box-shadow: 1px 3px 10px #e9ecef; */
   background-color: white;
@@ -43,18 +41,24 @@ body {
   margin: 2em auto;
 }
 
-#form>input,.btn {
+#form>.btn {
   border: 1px solid #e9ecef;
   padding: .9em 1em;
 }
 
-#form>input:focus {
-  outline: none;
-}
+
 
 #form>.btn {
   background-color: #003049;
   color: #e9ecef;
+  font-size: 1em;
+  margin-top: -20px;
+  cursor: pointer;
+}
+
+#form>.btn:hover {
+  background-color: #1683be;
+  /* color: #4679ac; */
   font-size: 1em;
   cursor: pointer;
 }
@@ -68,41 +72,101 @@ body {
 .flex-col {
   flex-direction: column;
 }
+/* Adding border and padding to the surrounding container */
+.register-container {
+  border: 1px solid #437fbb;
+  padding: 7px;
+  border-width: 10px;
+  border-bottom-width: 10px;
+  border-radius: 5px;
+  
+
+}
 
 .register .col-1 {
   margin: auto;
+  padding-right: 51px;
   padding: 3em 0;
+  height: 20%;
 }
 
 .register .col-2 img {
-  width: 500px;
-  height: 100%;
+  width: 560px;
+  margin-top: 80px;
+  height: 80%;
   object-fit: cover;
-  align-self: flex-end;
+  /* border: 1px solid #0968c6; */
+  /* align-self: flex-end; */
   /* border-top-left-radius:5px; */
-  
+
   border-top-right-radius: 5px;
   border-bottom-right-radius: 5px;
   display: none;
 }
 
+
 /* to make terms n condition in one line */
 input#terms {
   transform: scale(1.5);
   margin-right: 0.5rem;
+  margin-bottom: 30px;
+  margin-top: 20px;
+
 }
 
 span {
   font-size: 1.2rem;
+  margin-top: -10px;
 }
 
 span.login-text {
   font-size: 0.9rem;
 }
 
+.form-field input {
+  border: 1px solid #7795b3;
+  width: 240px;
+  height: 40px;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+
+}
+
+.register .login-link {
+  margin-top: -30px;
+}
+
+/* .form-field {
+  display: flex;
+  align-items: center;
+  border: 1px solid #7795b3;
+  border-radius: 5px;
+  padding: 0.5rem;
+  margin-bottom: 1rem;
+}
+
+.form-field input {
+  flex: 1;
+  border: none;
+  padding: -0.5rem;
+  font-size: 1rem;
+} */
+
+svg:not(:root).svg-inline--fa,
+svg:not(:host).svg-inline--fa {
+  overflow: visible;
+  margin-right: 10px;
+
+  box-sizing: content-box;
+}
+
 
 
 @media screen and (min-width: 860px) {
+  /* The styles inside this block will only apply to screens with a minimum width of 860 pixels and above */
+
   .register .col-2 img {
     display: initial;
   }
